<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.MainActivity"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:background="@color/color_primary"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/color_primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/user_photo_img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_image_size"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user_photo"
                    android:fitsSystemWindows="true"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/AppTheme.PopupOverlay"
                    android:titleTextColor="@color/white"
                    app:layout_collapseMode="pin"/>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/item_ll"
                    android:layout_margin="0dp"
                    android:background="@color/grey"
                    android:paddingTop="@dimen/spacing_normal_16"
                    android:paddingBottom="@dimen/spacing_normal_16"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:id="@+id/rating_index_ll"
                        style="@style/header_inner_ll"
                        android:layout_weight="0.25">
                        <TextView
                            android:id="@+id/rating_index_tv"
                            style="@style/header_tv"
                            android:text="@string/rating_value"
                            android:textSize="@dimen/text_medial_24"/>
                        <TextView
                            android:id="@+id/rating_text_tv"
                            style="@style/header_tv"
                            android:text="@string/rating_text"
                            android:textSize="@dimen/text_normal_size_16"/>
                    </LinearLayout>
                    <View style="@style/vertical_line"></View>
                    <LinearLayout
                        android:id="@+id/code_intex_ll"
                        style="@style/header_inner_ll"
                        android:layout_weight="0.5">
                        <TextView
                            android:id="@+id/code_index_tv"
                            style="@style/header_tv"
                            android:text="@string/code_value"
                            android:textSize="@dimen/text_medial_24"/>
                        <TextView
                            android:id="@+id/code_text_tv"
                            style="@style/header_tv"
                            android:text="@string/code_text"
                            android:textSize="@dimen/text_normal_size_16"/>
                    </LinearLayout>
                    <View style="@style/vertical_line"></View>
                    <LinearLayout
                        android:id="@+id/project_index_ll"
                        style="@style/header_inner_ll"
                        android:layout_weight="0.25">
                        <TextView
                            android:id="@+id/project_index_tv"
                            style="@style/header_tv"
                            android:text="@string/project_value"
                            android:textSize="@dimen/text_medial_24"/>
                        <TextView
                            android:id="@+id/project_text_tv"
                            style="@style/header_tv"
                            android:text="@string/project_text"
                            android:textSize="@dimen/text_normal_size_16"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    style="@style/item_ll">
                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_call_grey_24dp"/>
                    <LinearLayout
                        style="@style/item_inner_ll">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                style="@style/edit_text"
                                android:id="@+id/phone_et"
                                android:hint="@string/item_1"
                                android:text="@string/item_1_text"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_phone_in_talk_grey_24dp"/>
                </LinearLayout>

                <View style="@style/horizontal_line"/>

                <LinearLayout
                    style="@style/item_ll">
                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_email_grey_24dp"/>
                    <LinearLayout
                        style="@style/item_inner_ll">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                style="@style/edit_text"
                                android:id="@+id/email_et"
                                android:hint="@string/item_2"
                                android:text="@string/item_2_text"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_send_grey_24dp"/>
                </LinearLayout>

                <View style="@style/horizontal_line"/>

                <LinearLayout
                    style="@style/item_ll">
                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_vk_grey_24dp"/>
                    <LinearLayout
                        style="@style/item_inner_ll">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                style="@style/edit_text"
                                android:id="@+id/vk_profile_et"
                                android:hint="@string/item_3"
                                android:text="@string/item_3_text"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_visibility_grey_24dp"/>
                </LinearLayout>

                <View style="@style/horizontal_line"/>

                <LinearLayout
                    style="@style/item_ll">
                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_github_grey_24dp"/>
                    <LinearLayout
                        style="@style/item_inner_ll">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/github_et"
                                style="@style/edit_text"
                                android:hint="@string/item_4"
                                android:text="@string/item_4_text"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_visibility_grey_24dp"/>
                </LinearLayout>

                <View style="@style/horizontal_line"/>

                <LinearLayout
                    style="@style/item_ll">
                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_account_circle_grey_24dp"/>
                    <LinearLayout
                        style="@style/item_inner_ll">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/about_et"
                                style="@style/edit_text"
                                android:hint="@string/item_5"
                                android:text="@string/item_5_text"
                                android:inputType="textMultiLine"
                                />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
